--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -99,7 +99,7 @@
                                                                                 </li>
                                                                             </ul>
                                                                         </div>
-                                                                        <div class="label"><span>-30%</span></div>
+                                                                        <div class="label"><span>-28%</span></div>
                                                                     </div>
                                                                     <div class="dot-info">
                                                                         <h2 class="dot-title"><a
@@ -1252,7 +1252,7 @@
                         <div class="list-block">
                             <h3 class="dot-title">Service</h3>
                             <ul>
-                                <li><a href="/aboutus">About us</a></li>
+                                <li><a href="/site/aboutus">About us</a></li>
                                 <li><a href="#">Delivery Information</a></li>
                                 <li><a href="#">Terms & Condition</a></li>
                                 <li><a href="#">Privacy Policy</a></li>
@@ -1265,7 +1265,7 @@
                                 <li><a href="/login">Login</a></li>
                                 <li><a href="#">Wishlist</a></li>
                                 <li><a href="#">Cart</a></li>
-                                <li><a href="#">Checkout</a></li>
+                                <li><a href="/user/checkout">Checkout</a></li>
                             </ul>
                         </div>
                         <div class="list-block">
