--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -242,9 +242,11 @@
                                 <div class="outer-main">
                                     <div class="main-image swiper">
                                         <div class="wrap swiper-wrapper">
-                                            <div class="item swiper-slide"><img src="{{product.gallery}}" alt="">
+                                            <div class="item swiper-slide"><img src="/images/{{product.gallery}}"
+                                                    alt="">
                                             </div>
-                                            <div class="item swiper-slide"><img src="{{product.thumbnail}}" alt="">
+                                            <div class="item swiper-slide"><img src="/images/{{product.thumbnail}}"
+                                                    alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -256,11 +258,11 @@
                                     <div class="thumbnail-image swiper">
                                         <div class="wrap swiper-wrapper">
                                             <div class="item swiper-slide">
-                                                <div class="thumb-wrap"><img src="{{product.gallery}}" alt="">
+                                                <div class="thumb-wrap"><img src="/images/{{product.gallery}}" alt="">
                                                 </div>
                                             </div>
                                             <div class="item swiper-slide">
-                                                <div class="thumb-wrap"><img src="{{product.thumbnail}}" alt="">
+                                                <div class="thumb-wrap"><img src="/images/{{product.thumbnail}}" alt="">
                                                 </div>
                                             </div>
                                         </div>
@@ -417,7 +419,7 @@
                             <div id="product-custom" class="product-about custom">
                                 <h3>Our custom size</h3>
                                 <div class="image">
-                                    <img src="{{product.gallery}}" alt=""> <!--image custom shoes-->
+                                    <img src="/images/{{product.gallery}}" alt=""> <!--image custom shoes-->
                                 </div>
                             </div>
                             <div id="product-review" class="product-about review">
@@ -713,7 +715,7 @@
                         <div class="list-block">
                             <h3 class="dot-title">Service</h3>
                             <ul>
-                                <li><a href="/aboutus">About us</a></li>
+                                <li><a href="/site/aboutus">About us</a></li>
                                 <li><a href="#">Delivery Information</a></li>
                                 <li><a href="#">Terms & Condition</a></li>
                                 <li><a href="#">Privacy Policy</a></li>
@@ -726,7 +728,7 @@
                                 <li><a href="/login">Login</a></li>
                                 <li><a href="">Wishlist</a></li>
                                 <li><a href="/cart">Cart</a></li>
-                                <li><a href="/checkout">Checkout</a></li>
+                                <li><a href="/user/checkout">Checkout</a></li>
                             </ul>
                         </div>
                         <div class="list-block">
@@ -929,7 +931,7 @@
                                                 </div>
                                                 <div class="thumbnail">
                                                     <a href="">
-                                                        <img src="{{product.gallery}}" alt="">
+                                                        <img src="/images/{{product.gallery}}" alt="">
                                                     </a>
                                                 </div>
                                             </div>
@@ -960,7 +962,7 @@
                                                 </div>
                                                 <div class="thumbnail">
                                                     <a href="">
-                                                        <img src="{{product.gallery}}" alt="">
+                                                        <img src="/images/{{product.gallery}}" alt="">
                                                     </a>
                                                 </div>
                                             </div>
