--- a/views/contact/contact.hbs
+++ b/views/contact/contact.hbs
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<style>
+    @import url(/stylesheets/contact.css);
+</style>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> CONTACT-US</title>
-    <link rel="stylesheet" href="./stylesheets/contact.css">
-</head>
 <div class="container">
     <div class="formbx">
         <form action="">
@@ -20,18 +15,14 @@
                 <span>Email Address</span>
             </div>
             <div class="inputbox">
-               <textarea name="" id="" cols="30" rows="10" required></textarea>
-               <span>Type Your Message Here...</span>
+                <textarea name="" id="" cols="30" rows="10" required></textarea>
+                <span>Type Your Message Here...</span>
             </div>
             <div class="inputbox">
                 <input type="submit" value="send">
+                <input type="submit" value="back">
             </div>
         </form>
     </div>
     <div class="imgbx"><img src="./images/contactus.svg" alt=""></div>
 </div>
-<body>
-    
-</body>
-
-</html>
