--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -108,7 +108,7 @@
                                                                                 </li>
                                                                             </ul>
                                                                         </div>
-                                                                        <div class="label"><span>-30%</span></div>
+                                                                        <div class="label"><span>-28%</span></div>
                                                                     </div>
                                                                     <div class="dot-info">
                                                                         <h2 class="dot-title"><a
@@ -191,11 +191,8 @@
                                         <i class="ri-arrow-down-s-line"></i>
                                     </a>
                                     <ul class="sub-menu list-block">
-                                        <li><a href="/category/nike">Nike</a></li><!--Product brands Nike-->
-                                        <li><a href="/category/dior">Dior</a></li><!--Product brands Dior-->
-                                        <li><a href="/category/adidas">Adidas</a></li><!--Product brands Adidas-->
-                                        <li><a href="/category/balenciaga">Balenciaga</a></li>
-                                        <!--Product brands Balenciaga-->
+                                        <li><a href="/category">Nike</a></li><!--Product brands Nike-->
+                                        <li><a href="/category">Dior</a></li><!--Product brands Dior-->
                                     </ul>
                                 </li>
                                 <li><a href="/login"><span>Login</span></a></li> <!--login-->
