--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -15,6 +15,7 @@
         <div class="inner-header">
             <div class="container wide">
                 <div class="wrap">
+                    <!--Header left-->
                     <div class="header-left">
                         <div class="menu-bar">
                             <a href="#0" class="menu-trigger" trigger-button data-target="mobile-menu"><i
@@ -22,13 +23,14 @@
                         </div>
                         <div class="list-inline">
                             <ul>
-                                <li><a href=""><i class="ri-user-line"></i></a></li>
+                                <li><a href="/login"><i class="ri-user-line"></i></a></li>
                                 <li><a href=""><span class="item-floating">7</span>
                                         <i class="ri-star-line"></i>
                                     </a></li>
                             </ul>
                         </div>
                     </div>
+                    <!--Header center-->
                     <div class="header-center">
                         <nav class="menu">
                             <ul>
@@ -105,7 +107,7 @@
                                                                                 </li>
                                                                             </ul>
                                                                         </div>
-                                                                        <div class="label"><span>-30%</span></div>
+                                                                        <div class="label"><span>-28%</span></div>
                                                                     </div>
                                                                     <div class="dot-info">
                                                                         <h2 class="dot-title"><a
@@ -160,9 +162,9 @@
                                                             <div class="list-block">
                                                                 <h3 class="dot-title">Categories</h3>
                                                                 <ul>
-                                                                    <li><a href="#">Jordan</a></li>
+                                                                    <li><a href="#bycats">Jordan</a></li>
                                                                     <li><a href="#">Gym and Trainning</a></li>
-                                                                    <li><a href="#">Sandal and Slides</a></li>
+                                                                    <li><a href="#">Air Max</a></li>
                                                                     <li><a href="#">Running</a></li>
 
                                                                 </ul>
@@ -188,11 +190,8 @@
                                         <i class="ri-arrow-down-s-line"></i>
                                     </a>
                                     <ul class="sub-menu list-block">
-                                        <li><a href="/category/nike">Nike</a></li><!--Product brands Nike-->
-                                        <li><a href="/category/dior">Dior</a></li><!--Product brands Dior-->
-                                        <li><a href="/category/adidas">Adidas</a></li><!--Product brands Adidas-->
-                                        <li><a href="/category/balenciaga">Balenciaga</a></li>
-                                        <!--Product brands Balenciaga-->
+                                        <li><a href="/category">Nike</a></li><!--Product brands Nike-->
+                                        <li><a href="/category">Dior</a></li><!--Product brands Dior-->
                                     </ul>
                                 </li>
                                 <li><a href="/login"><span>Login</span></a></li> <!--login-->
@@ -201,30 +200,20 @@
                         </nav>
                         <div class="branding"><a href="/">Shopping</a></div>
                     </div>
+                    <!--Header right-->
                     <div class="header-right">
                         <div class="list-inline">
                             <ul>
                                 <li><a href="#0" trigger-button data-target="search-float"><i
                                             class="ri-search-line"></i></a></li>
-                                <li><a href="#0" trigger-button data-target="data-cart"><span
-                                            class="item-floating">0</span><i class="ri-shopping-bag-line"></i></a>
-                                </li>
+                                <li><a href=""><span class="item-floating">0</span><i
+                                            class="ri-shopping-bag-line"></i></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <div class="wrap">
-                    <div class="breadcrumb list-inline">
-                        <ul>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Product</a></li>
-                            <li><span>Category</span></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+
             <div id="search-float" class="search-float">
                 <div class="container wide">
                     <form action="/" method="get" class="search">
