--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -187,7 +187,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="/login"><span>Login</span></a></li> <!--login-->
-                                <li><a href=""><span>Contacts</span></a></li> <!--contact-->
+                                <li><a href="/user/contact"><span>Contacts</span></a></li> <!--contact-->
                             </ul>
                         </nav>
                         <div class="branding"><a href="/">Shopping</a></div>
