--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -928,7 +928,7 @@
                                                 </div>
                                                 <div class="thumbnail">
                                                     <a href="">
-                                                        <img src="/images/{{product.gallery}}" alt="">
+                                                        <img src="./images/product_01.jpg" alt="">
                                                     </a>
                                                 </div>
                                             </div>
@@ -959,7 +959,7 @@
                                                 </div>
                                                 <div class="thumbnail">
                                                     <a href="">
-                                                        <img src="/images/{{product.gallery}}" alt="">
+                                                        <img src="./images/product_07.jpg" alt="">
                                                     </a>
                                                 </div>
                                             </div>
@@ -990,7 +990,7 @@
                                                 </div>
                                                 <div class="thumbnail">
                                                     <a href="">
-                                                        <img src="{{product.gallery}}" alt="">
+                                                        <img src="./images/product_04.jpg" alt="">
                                                     </a>
                                                 </div>
                                             </div>
@@ -1010,68 +1010,7 @@
                                                 </a>
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="grouping">
-                                                <div class="quantity">
-                                                    <div class="control">
-                                                        <button>-</button>
-                                                        <input type="text" value="1">
-                                                        <button>+</button>
-                                                    </div>
-                                                </div>
-                                                <div class="thumbnail">
-                                                    <a href="">
-                                                        <img src="{{product.gallery}}" alt="">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="variants">
-                                                <h4 class="dot-title"><a href="">The Sneaker in VietNam</a></h4>
-                                                <div class="color grey-color">
-                                                    <span>Color:</span>
-                                                    <span>White</span>
-                                                </div>
-                                                <div class="size grey-color">
-                                                    <span>Size:</span>
-                                                    <span>42</span>
-                                                </div>
-                                                <div class="price">$45.00</div>
-                                                <a href="" class="item-remove">
-                                                    <i class="ri-close-line"></i>
-                                                </a>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="grouping">
-                                                <div class="quantity">
-                                                    <div class="control">
-                                                        <button>-</button>
-                                                        <input type="text" value="1">
-                                                        <button>+</button>
-                                                    </div>
-                                                </div>
-                                                <div class="thumbnail">
-                                                    <a href="">
-                                                        <img src="{{product.gallery}}" alt="">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="variants">
-                                                <h4 class="dot-title"><a href="">The Sneaker in VietNam</a></h4>
-                                                <div class="color grey-color">
-                                                    <span>Color:</span>
-                                                    <span>White</span>
-                                                </div>
-                                                <div class="size grey-color">
-                                                    <span>Size:</span>
-                                                    <span>42</span>
-                                                </div>
-                                                <div class="price">$45.00</div>
-                                                <a href="" class="item-remove">
-                                                    <i class="ri-close-line"></i>
-                                                </a>
-                                            </div>
-                                        </li>
+
                                     </ul>
                                 </div>
                             </div>
