--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -206,8 +206,8 @@
                             <ul>
                                 <li><a href="#0" trigger-button data-target="search-float"><i
                                             class="ri-search-line"></i></a></li>
-                                <li><a href=""><span class="item-floating">0</span><i
-                                            class="ri-shopping-bag-line"></i></a></li>
+                                <li><a href="#0" trigger-button data-target="data-cart"><span
+                                            class="item-floating">0</span><i class="ri-shopping-bag-line"></i></a>
                             </ul>
                         </div>
                     </div>
@@ -320,7 +320,6 @@
                                             <div class="sumary">
                                                 <label><span>Price</span></label>
                                                 <div class="range-track" id="range-track">
-
                                                     <input type="range" class="range-input" value="0" min="100"
                                                         max="500" step="10">
                                                     <input type="range" class="range-input" value="250" min="100"
