--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -207,8 +207,8 @@
                             <ul>
                                 <li><a href="#0" trigger-button data-target="search-float"><i
                                             class="ri-search-line"></i></a></li>
-                                <li><a href=""><span class="item-floating">0</span><i
-                                            class="ri-shopping-bag-line"></i></a></li>
+                                <li><a href="#0" trigger-button data-target="data-cart"><span
+                                            class="item-floating">0</span><i class="ri-shopping-bag-line"></i></a>
                             </ul>
                         </div>
                     </div>
