--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -327,8 +327,8 @@
                                                 </div>
 
                                                 <div class="price-range grey-color">
-                                                    <span class="rangeValues" id="range-values">
-                                                    </span>
+                                                    {{!-- <span class="rangeValues" id="range-values">
+                                                    </span> --}}
                                                     <!-- <p id="min-value">$30</p>
                                                     <p id="max-value">$500</p> -->
                                                 </div>
@@ -336,6 +336,8 @@
                                         </div>
                                     </div>
                                 </div>
+
+
                                 <div class="button-container">
                                     <div class="button"><a href="#" class="primary-btn" onclick="clearForm()">Clear</a>
                                     </div>
