--- a/public/stylesheets/category.css
+++ b/public/stylesheets/category.css
@@ -2205,9 +2205,10 @@ form .button {
 
 
 input[type="range"] {
-    --webkit-appearance: none;
-    width: 15%;
+    -webkit-appearance: none !important;
+    width: 20%;
     position: absolute;
+    border: 1px solid var(--white-color);
 }
 
 input[type="range"]:focus {
