--- a/public/stylesheets/category.css
+++ b/public/stylesheets/category.css
@@ -2209,6 +2209,7 @@ input[type="range"] {
     width: 20%;
     position: absolute;
     border: 1px solid var(--white-color);
+    left: 20px;
 }
 
 input[type="range"]:focus {
