--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -327,19 +327,12 @@
                                                     <input type="range" class="range-input" value="250" min="100"
                                                         max="500" step="10">
                                                 </div>
-
-                                                <div class="price-range grey-color">
-
-                                                    <!-- <p id="min-value">$30</p>
-                                                    <p id="max-value">$500</p> -->
-                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
 
-
-                                <div class="button-container">
+                                <div class="button-container" style="margin-top: 20px;">
                                     <div class="button"><a href="#" class="primary-btn" onclick="clearForm()">Clear</a>
                                     </div>
                                     <div class="button"><a href="#" class="primary-btn">Submit</a></div>
