--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -16,7 +16,7 @@
                         <div class="list-inline">
                             <ul>
                                 <li><a href="/login"><i class="ri-user-line"></i></a></li>
-                                <li><a href=""><span class="item-floating">7</span>
+                                <li><a href="/user/wishlist"><span class="item-floating">7</span>
                                         <i class="ri-star-line"></i>
                                     </a></li>
                             </ul>
