--- a/views/wishlist/wishlist.hbs
+++ b/views/wishlist/wishlist.hbs
@@ -216,7 +216,6 @@
                     </div>
                 </div>
             </div>
-
             <div id="search-float" class="search-float">
                 <div class="container wide">
                     <form action="/" method="get" class="search">
@@ -263,7 +262,7 @@
                                             <div class="grouping wrapper">
                                                 <div class="thumbnail ob-cover">
                                                     <a href="">
-                                                        <img src="./images/product_01.jpg" alt="">
+                                                        <img src="./images/product-01.png" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="variants">
@@ -298,7 +297,7 @@
                                             <div class="grouping wrapper">
                                                 <div class="thumbnail ob-cover">
                                                     <a href="">
-                                                        <img src="./images/product_01.jpg" alt="">
+                                                        <img src="./images/product-01.png" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="variants">
@@ -333,7 +332,7 @@
                                             <div class="grouping wrapper">
                                                 <div class="thumbnail ob-cover">
                                                     <a href="">
-                                                        <img src="./images/product_01.jpg" alt="">
+                                                        <img src="./images/product-01.png" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="variants">
@@ -368,37 +367,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="cart-total">
-                            <div class="product-list has-bg">
-                                <div class="table-content">
-                                    <div class="grouping">
-                                        <div class="add-note">
-                                            <textarea rows="3" placeholder="Additional note +"></textarea>
-                                        </div>
-                                        <div class="sub-total">
-                                            <div class="sub-pricing">
-                                                <span>Subtotal</span>
-                                                <span class="sub-total-price">$135.00</span>
-                                            </div>
-                                            <div class="sub-terms">
-                                                <input type="checkbox" class="checker" id="terms">
-                                                <label for="terms">I agree to <a href="" class="grey-link">Terms &
-                                                        Condition</a></label>
-                                            </div>
-                                            <div class="button">
-                                                <a href="" class="secondary-btn">Checkout</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
-
-
-
     </main>
     <footer>
         <div class="inner-footer">
@@ -638,7 +609,7 @@
                                                 </div>
                                                 <div class="thumbnail">
                                                     <a href="">
-                                                        <img src="./images/product_01.jpg" alt="">
+                                                        <img src="./images/product-01.png" alt="">
                                                     </a>
                                                 </div>
                                             </div>
@@ -669,7 +640,7 @@
                                                 </div>
                                                 <div class="thumbnail">
                                                     <a href="">
-                                                        <img src="./images/product_07.jpg" alt="">
+                                                        <img src="./images/product-07.png" alt="">
                                                     </a>
                                                 </div>
                                             </div>
@@ -700,7 +671,7 @@
                                                 </div>
                                                 <div class="thumbnail">
                                                     <a href="">
-                                                        <img src="./images/product_04.jpg" alt="">
+                                                        <img src="./images/product-04.png" alt="">
                                                     </a>
                                                 </div>
                                             </div>
