--- a/views/admin/home/admin.hbs
+++ b/views/admin/home/admin.hbs
@@ -18,14 +18,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"
         integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="../javascripts/bootstrap.bundle.min.js"></script>
-    <script src="../javascripts/admin.js"></script>
+    <script src="./javascripts/bootstrap.bundle.min.js"></script>
+    <script src="./javascripts/admin.js"></script>
     <!-- end: JS -->
     <title>Admin Page</title>
 </head>
 
 <body>
-
     <!-- start: Sidebar -->
     <div class="sidebar position-fixed top-0 bottom-0 bg-white border-end">
         <div class="d-flex align-items-center p-3">
@@ -226,9 +225,7 @@
                     <div class="d-flex align-items-center cursor-pointer dropdown-toggle" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         <span class="me-2 d-none d-sm-block">Trịnh Xuân Bách</span>
-                        <img class="navbar-profile-image"
-                            src="./images/profile.png"
-                            alt="Image">
+                        <img class="navbar-profile-image" src="./images/profile.png" alt="Image">
                     </div>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                         <li><a class="dropdown-item" href="./profile/profile.hbs">Profile</a></li>
@@ -316,8 +313,6 @@
 
     </main>
     <!-- end: Main -->
-
-    
 </body>
 
 </html>
