--- a/views/admin/account/admin-account.hbs
+++ b/views/admin/account/admin-account.hbs
@@ -11,14 +11,15 @@
     @import url(https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css);
 </style>
 
-<script type="module" src="./javascripts/jquery-3.3.1.min.js"></script>
-<script type="module" src="./javascripts/popper.min.js"></script>
-<script type="module" src="./javascripts/bootstrap.min.js"></script>
-<script type="module" src="./javascripts/jquery-3.3.1.slim.min.js"></script>
+<script src="/javascripts/jquery-3.3.1.min.js"></script>
+<script src="/javascripts/popper.min.js"></script>
+<script src="/javascripts/bootstrap.min.js"></script>
+<script src="/javascripts/jquery-3.3.1.slim.min.js"></script>
 
 <div class="xp-breadcrumbbar text-center">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item active" aria-curent="page">Management Account</li>
+        <li class="breadcrumb-item active" aria-curent="page" style="text-align: center;">Management Account
+        </li>
     </ol>
 </div>
 <div class="main-content">
@@ -193,7 +194,7 @@
         </div>
 
 
-        <!----add-modal start--------->
+        <!--add-modal start--->
         <div class="modal fade" tabindex="-1" id="addEmployeeModal" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -286,7 +287,7 @@
                 </div>
             </div>
         </div>
-        <!----edit-modal end--------->
+        <!--edit-modal end-->
         <footer class="footer">
             <div class="container-fluid">
                 <div class="footer-in">
@@ -299,13 +300,6 @@
 
     </div>
 </div>
-
-
-<script src="./javascripts/jquery-3.3.1.min.js"></script>
-<script src="./javascripts/popper.min.js"></script>
-<script src="./javascripts/bootstrap.min.js"></script>
-<script src="./javascripts/jquery-3.3.1.slim.min.js"></script>
-
 <script type="text/javascript">
     $(document).ready(function () {
         $(".xp-menubar").on('click', function () {
