--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -1106,45 +1106,57 @@
                                     <div class="item">
                                         <div class="dot-image">
                                             <div class="thumbnail hover">
-                                                <a href="">
+                                                <a
+                                                    href="https://www.linkedin.com/pulse/how-shoes-can-make-you-happy-patrick-van-hees-de-geluksprofessor-/">
                                                     <img src="./images/blog_01.jpg" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="dot-info">
-                                            <a href="">Feeling</a>
+                                            <a
+                                                href="https://www.linkedin.com/pulse/how-shoes-can-make-you-happy-patrick-van-hees-de-geluksprofessor-/">Feeling</a>
                                             <h3 class="dot-title">
-                                                <a href="">How do you feel today?</a>
+                                                <a
+                                                    href="https://www.linkedin.com/pulse/how-shoes-can-make-you-happy-patrick-van-hees-de-geluksprofessor-/">How
+                                                    do you feel today?</a>
                                             </h3>
                                         </div>
                                     </div>
                                     <div class="item">
                                         <div class="dot-image">
                                             <div class="thumbnail hover">
-                                                <a href="">
+                                                <a
+                                                    href="https://www.nia.nih.gov/health/exercise-and-physical-activity/finding-right-fitness-shoes-and-clothes">
                                                     <img src="./images/blog_02.jpg" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="dot-info">
-                                            <a href="">Tips</a>
+                                            <a
+                                                href="https://www.nia.nih.gov/health/exercise-and-physical-activity/finding-right-fitness-shoes-and-clothes">Tips</a>
                                             <h3 class="dot-title">
-                                                <a href="">Property wear shoe on gymerday</a>
+                                                <a
+                                                    href="https://www.nia.nih.gov/health/exercise-and-physical-activity/finding-right-fitness-shoes-and-clothes">Property
+                                                    wear shoe on gymerday</a>
                                             </h3>
                                         </div>
                                     </div>
                                     <div class="item">
                                         <div class="dot-image">
                                             <div class="thumbnail hover">
-                                                <a href="">
+                                                <a
+                                                    href="https://www.instyle.com/what-shoes-to-wear-with-dresses-7558636">
                                                     <img src="./images/blog_03.jpg" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="dot-info">
-                                            <a href="">Trainning</a>
+                                            <a
+                                                href="https://www.instyle.com/what-shoes-to-wear-with-dresses-7558636">Trainning</a>
                                             <h3 class="dot-title">
-                                                <a href="">What should I wear this shoes?</a>
+                                                <a
+                                                    href="https://www.instyle.com/what-shoes-to-wear-with-dresses-7558636">What
+                                                    should I wear this shoes?</a>
                                             </h3>
                                         </div>
                                     </div>
