--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -7,8 +7,8 @@
 <style>
     @import url(/stylesheets/category.css);
 </style>
-<script type="module" src="/javascripts/swiper-bundle.min.js"></script>
-<script type="module" src="/javascripts/script.js"></script>
+<script src="/javascripts/swiper-bundle.min.js"></script>
+<script src="/javascripts/script.js"></script>
 
 <div id="page" class="page-category">
     <header>
